# Snake

./: Assets.hpp  CMakeLists.txt  Cell.hpp  GameConfig.hpp  GameState.hpp  GameUI.hpp  Grid.hpp  README.md  RestartButton.hpp  ScoreCounter.hpp  SnakeData.hpp  build_run.bat  main.cpp
Engine/: Image.hpp  Random.hpp  Text.hpp  Window.hpp
